refactor(be) - move ImageResponseDto creation logic to ImageService